--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "commitmsg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "scripts": {
