--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
-    "redux-saga": "^1.1.3"
+    "redux-saga": "^1.1.3",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.1",
