--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "json-server": "^0.17.0",
+    "json-server-auth": "^2.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.3.1",
